tests/mypy/mypy_function_wrapper_fn_t7.out
tests/mypy/mypy_function_wrapper_fn_t7.py:27: error: Too few arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:32: error: Too few arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:35: error: Unexpected keyword argument "y" for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:69: error: Too few arguments for "__call__" of "BoundFunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:72: error: Too few arguments for "__call__" of "BoundFunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:75: error: Too few arguments for "__call__" of "BoundFunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:84: error: Too few arguments for "__call__" of "BoundFunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:87: error: Too few arguments for "__call__" of "BoundFunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:184: error: Too few arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:189: error: Too few arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_function_wrapper_fn_t7.py:192: error: Unexpected keyword argument "y" for "__call__" of "FunctionWrapper"  [call-arg]
Found 11 errors in 1 file (checked 1 source file)
